--- a/DesktopApp/Views/RemoteConnectionPage.xaml
+++ b/DesktopApp/Views/RemoteConnectionPage.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:v="using:DesktopApp.Views"
+      xmlns:m="using:DesktopApp.Core.Models"
       xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
       Background="{ThemeResource RegionBrush}"
       DataContext="{x:Bind ViewModel}"
@@ -14,9 +14,16 @@
             <Setter Property="CornerRadius"
                     Value="{StaticResource ControlCornerRadius}" />
         </Style>
+        <DataTemplate x:Key="FileTemplate"
+                      x:DataType="m:File">
+            <Grid>
+                <TextBlock Text="{x:Bind Name}">
+
+                </TextBlock>
+            </Grid>
+        </DataTemplate>
     </Page.Resources>
-    <SplitView 
-               x:Name="splitView"
+    <SplitView x:Name="splitView"
                PaneBackground="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
                IsPaneOpen="True"
                OpenPaneLength="460"
@@ -26,7 +33,10 @@
                VerticalAlignment="Stretch"
                DisplayMode="Inline">
         <SplitView.Pane>
-            <ContentControl VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch">
+            <ContentControl VerticalAlignment="Stretch"
+                            HorizontalAlignment="Stretch"
+                            VerticalContentAlignment="Stretch"
+                            HorizontalContentAlignment="Stretch">
                 <Grid x:Name="SplitViewContentPanel">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
@@ -403,110 +413,142 @@
                     <RowDefinition Height="2*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                
-                <MediaElement Name="PeerVideo"
-                              RealTimePlayback="True"
-                              Grid.Row="0"
-                              RelativePanel.AlignLeftWithPanel="True"
-                              RelativePanel.AlignRightWithPanel="True"
-                              RelativePanel.AlignTopWithPanel="True"
-                              RelativePanel.AlignBottomWithPanel="True"
-                              MediaFailed="PeerVideo_MediaFailed" />
 
-                <Grid x:Name="AppBarGrid"
-                      Grid.Row="0"
-                      Background="Transparent"
-                      HorizontalAlignment="Center"
-                      VerticalAlignment="Top"
-                      Width="auto"
-                      Height="auto"
-                      PointerEntered="AppBarGrid_PointerEntered"
-                      PointerExited="AppBarGrid_PointerExited">
-                    <Grid.Resources>
-                        <Storyboard x:Name="AppBarClose">
-                            <DoubleAnimation Storyboard.TargetName="AppBarGrid"
-                                             FillBehavior="HoldEnd"
-                                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransForm.Y)"
-                                             To="-73">
-                                <DoubleAnimation.EasingFunction>
-                                    <CircleEase EasingMode="EaseOut" />
-                                </DoubleAnimation.EasingFunction>
-                            </DoubleAnimation>
 
-                        </Storyboard>
-                        <Storyboard x:Name="AppBarOpen">
-                            <DoubleAnimation Storyboard.TargetName="AppBarGrid"
-                                             FillBehavior="HoldEnd"
-                                             Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransForm.Y)"
-                                             To="0">
-                                <DoubleAnimation.EasingFunction>
-                                    <CircleEase EasingMode="EaseOut" />
-                                </DoubleAnimation.EasingFunction>
-                            </DoubleAnimation>
-                        </Storyboard>
-
-                    </Grid.Resources>
-                    <Grid.RenderTransform>
-                        <TranslateTransform x:Name="Translate"></TranslateTransform>
-                    </Grid.RenderTransform>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="60" />
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="60" />
-                    </Grid.ColumnDefinitions>
+                <Grid>
                     <Grid.RowDefinitions>
-
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="60" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <Border Grid.Column="1"
-                            Grid.Row="0"
-                            x:Name="AppBorder"
-                            Margin="20,15,0,0"
-                            BorderThickness="2"
-                            BorderBrush="White"
-                            CornerRadius="17">
+
+                    <MediaElement Name="PeerVideo"
+                                  RealTimePlayback="True"
+                                  Grid.Row="0"
+                                  RelativePanel.AlignLeftWithPanel="True"
+                                  RelativePanel.AlignRightWithPanel="True"
+                                  RelativePanel.AlignTopWithPanel="True"
+                                  RelativePanel.AlignBottomWithPanel="True"
+                                  MediaFailed="PeerVideo_MediaFailed" />
+                    <Grid x:Name="AppBarGrid"
+                          Grid.Row="0"
+                          Background="Transparent"
+                          HorizontalAlignment="Center"
+                          VerticalAlignment="Top"
+                          Width="auto"
+                          Height="auto"
+                          PointerEntered="AppBarGrid_PointerEntered"
+                          PointerExited="AppBarGrid_PointerExited">
+                        <Grid.Resources>
+                            <Storyboard x:Name="AppBarClose">
+                                <DoubleAnimation Storyboard.TargetName="AppBarGrid"
+                                                 FillBehavior="HoldEnd"
+                                                 Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransForm.Y)"
+                                                 To="-73">
+                                    <DoubleAnimation.EasingFunction>
+                                        <CircleEase EasingMode="EaseOut" />
+                                    </DoubleAnimation.EasingFunction>
+                                </DoubleAnimation>
+
+                            </Storyboard>
+                            <Storyboard x:Name="AppBarOpen">
+                                <DoubleAnimation Storyboard.TargetName="AppBarGrid"
+                                                 FillBehavior="HoldEnd"
+                                                 Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransForm.Y)"
+                                                 To="0">
+                                    <DoubleAnimation.EasingFunction>
+                                        <CircleEase EasingMode="EaseOut" />
+                                    </DoubleAnimation.EasingFunction>
+                                </DoubleAnimation>
+                            </Storyboard>
+
+                        </Grid.Resources>
+                        <Grid.RenderTransform>
+                            <TranslateTransform x:Name="Translate"></TranslateTransform>
+                        </Grid.RenderTransform>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="60" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="60" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="60" />
+                        </Grid.RowDefinitions>
+                        <Border Grid.Column="1"
+                                Grid.Row="0"
+                                x:Name="AppBorder"
+                                Margin="20,15,0,0"
+                                BorderThickness="2"
+                                BorderBrush="White"
+                                CornerRadius="17">
 
 
-                        <StackPanel  Margin="5,8,5,8"
-                                     CornerRadius="17"
-                                     Height="Auto"
-                                     Width="Auto"
-                                     Orientation="Horizontal">
-                            <AppBarToggleButton Icon="GoToStart"
-                                                Label="Başlat"
-                                                Visibility="Visible" />
-                            <AppBarToggleButton IsChecked="False"
-                                                Icon="Stop"
-                                                Label="Durdur"
-                                                IsEnabled="False"
-                                                Foreground="DarkRed" />
-                            <AppBarButton Icon="Clear"
-                                          Label="Sonlandır"
-                                          IsEnabled="False" />
-                            <AppBarSeparator />
-                            <AppBarToggleButton Icon="Keyboard"
-                                                Label="Yakala" />
-                            <AppBarButton Icon="Orientation"
-                                          Label="Yönlendir" />
-                            <AppBarSeparator />
-                            <AppBarToggleButton Icon="Message"
-                                                Label="İletiler" />
-                            <AppBarToggleButton Icon="Download"
-                                                Label="İndirmeler" />
-                            <AppBarSeparator />
-                            <AppBarButton Icon="UnPin"
-                                          Label="Kapat"
-                                          Click="UnpinButton_Click"
-                                          Visibility="{x:Bind UnPinButtonVisibility, Mode=OneWay}" />
-                            <AppBarButton Icon="Pin"
-                                          Label="Sabitle"
-                                          Click="PinButton_Click"
-                                          Visibility="{x:Bind PinButtonVisibility, Mode=OneWay}" />
-                        </StackPanel>
-                    </Border>
+                            <StackPanel  Margin="5,8,5,8"
+                                         CornerRadius="17"
+                                         Height="Auto"
+                                         Width="Auto"
+                                         Orientation="Horizontal">
+                                <AppBarToggleButton Icon="GoToStart"
+                                                    Label="Başlat"
+                                                    Visibility="Visible" />
+                                <AppBarToggleButton IsChecked="False"
+                                                    Icon="Stop"
+                                                    Label="Durdur"
+                                                    IsEnabled="False"
+                                                    Foreground="DarkRed" />
+                                <AppBarButton Icon="Clear"
+                                              Label="Sonlandır"
+                                              IsEnabled="False" />
+                                <AppBarSeparator />
+                                <AppBarToggleButton Icon="Keyboard"
+                                                    Label="Yakala" />
+                                <AppBarButton Icon="Orientation"
+                                              Label="Yönlendir" />
+                                <AppBarSeparator />
+                                <AppBarToggleButton Icon="Message"
+                                                    Label="İletiler" />
+                                <AppBarToggleButton Icon="Download"
+                                                    Label="İndirmeler" />
+                                <AppBarSeparator />
+                                <AppBarButton Icon="UnPin"
+                                              Label="Kapat"
+                                              Click="UnpinButton_Click"
+                                              Visibility="{x:Bind UnPinButtonVisibility, Mode=OneWay}" />
+                                <AppBarButton Icon="Pin"
+                                              Label="Sabitle"
+                                              Click="PinButton_Click"
+                                              Visibility="{x:Bind PinButtonVisibility, Mode=OneWay}" />
+                            </StackPanel>
+                        </Border>
+                    </Grid>
+
+                    <GridView x:Name="RemoteDirectory"
+                              Grid.Row="1"
+                              ItemTemplate="{StaticResource FileTemplate}"
+                              IsItemClickEnabled="False"
+                              ItemsSource="{Binding FileItems}"
+                              CanDragItems="False"
+                              AllowDrop="False"
+                              CanReorderItems="False"
+                              SelectionMode="Single"
+                              FlowDirection="LeftToRight">
+                        <GridView.ItemContainerStyle>
+                            <Style TargetType="GridViewItem">
+                                <Setter Property="Margin"
+                                        Value="5, 5, 5, 5" />
+                            </Style>
+                        </GridView.ItemContainerStyle>
+                        <GridView.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <ItemsWrapGrid x:Name="MaxItemsWrapGrid"
+                                               MaximumRowsOrColumns="3"
+                                               Orientation="Horizontal" />
+                            </ItemsPanelTemplate>
+                        </GridView.ItemsPanel>
+                    </GridView>
                 </Grid>
-                
+
             </Grid>
         </SplitView.Content>
 
