--- a/DesktopApp/Views/SettingsPage.xaml
+++ b/DesktopApp/Views/SettingsPage.xaml
@@ -1,88 +1,141 @@
-﻿<Page
-    x:Class="DesktopApp.Views.SettingsPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:helper="using:DesktopApp.Helpers"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Style="{StaticResource PageStyle}"
-    DataContext="{x:Bind Path=ViewModel}"
-    xmlns:xaml="using:Windows.UI.Xaml"
-    mc:Ignorable="d">
+﻿<Page x:Class="DesktopApp.Views.SettingsPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:h="using:DesktopApp.Helpers"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      Background="{ThemeResource RegionBrush}"
+      DataContext="{x:Bind Path=ViewModel}"
+      xmlns:xaml="using:Windows.UI.Xaml"
+      mc:Ignorable="d">
     <Page.Resources>
-        <helper:EnumToBooleanConverter x:Key="EnumToBooleanConverter" EnumType="ElementTheme" />
+
     </Page.Resources>
 
-    <Grid Margin="{StaticResource MediumLeftRightMargin}">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="48" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <StackPanel Name="Top" Grid.Row="0" Width="600"  Background="Transparent" Orientation="Horizontal" CornerRadius="2">
-            <Button  Name="BackButton" Command="{Binding OnBackCommand, Mode=OneTime}" Width="50" Height="50"  Foreground="Black"  BorderBrush="DarkBlue" BorderThickness="3" CornerRadius="60" Background="White">
-                <SymbolIcon Symbol="Back" />
-            </Button>
-            <Button  Name="ForwardButton" Command="{Binding OnForwardCommand, Mode=OneTime}" Width="50" Height="50"  Foreground="Black" BorderBrush="DarkBlue" BorderThickness="3" CornerRadius="60" Background="White">
-                <SymbolIcon Symbol="Forward" />
-            </Button>
-        </StackPanel>
-        <TextBlock
-            Grid.Row="0"
-            x:Uid="Settings_Title"
-            Style="{StaticResource PageTitleStyle}" />
 
-        <StackPanel
-            Grid.Row="1"
-            x:Name="ContentArea">
-            <TextBlock x:Uid="Settings_Personalization" Style="{ThemeResource SubtitleTextBlockStyle}" />
-            <StackPanel Margin="{StaticResource SmallTopBottomMargin}">
-                <TextBlock x:Uid="Settings_Theme" />
+    <Grid Background="Transparent">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0" Style="{StaticResource SettingsGrid}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
-                <StackPanel Margin="{StaticResource XSmallTopMargin}">
-                    <RadioButton
-                        x:Uid="Settings_Theme_Light"
-                        Command="{x:Bind ViewModel.SwitchThemeCommand}"
-                        IsChecked="{x:Bind ViewModel.ElementTheme, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Light, Mode=OneWay}"
-                        FontSize="15"
-                        GroupName="AppTheme">
-                        <RadioButton.CommandParameter>
-                            <xaml:ElementTheme>Light</xaml:ElementTheme>
-                        </RadioButton.CommandParameter>
-                    </RadioButton>
-                    <RadioButton
-                        x:Uid="Settings_Theme_Dark"
-                        Command="{x:Bind ViewModel.SwitchThemeCommand}"
-                        IsChecked="{x:Bind ViewModel.ElementTheme, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Dark, Mode=OneWay}"
-                        FontSize="15"
-                        GroupName="AppTheme">
-                        <RadioButton.CommandParameter>
-                            <xaml:ElementTheme>Dark</xaml:ElementTheme>
-                        </RadioButton.CommandParameter>
-                    </RadioButton>
-                    <RadioButton
-                        x:Uid="Settings_Theme_Default"
-                        Command="{x:Bind ViewModel.SwitchThemeCommand}"
-                        IsChecked="{x:Bind ViewModel.ElementTheme, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter=Default, Mode=OneWay}"
-                        FontSize="15"
-                        GroupName="AppTheme">
-                        <RadioButton.CommandParameter>
-                            <xaml:ElementTheme>Default</xaml:ElementTheme>
-                        </RadioButton.CommandParameter>
-                    </RadioButton>
-                </StackPanel>
+            <StackPanel Style="{StaticResource SettignStackPanel}" >
+                <TextBlock Text="Connection"  Style="{StaticResource SettingsHeader1}" />
+                <TextBlock Text="Connection" Style="{StaticResource SettingsHeader2}"  />
+                <TextBox Style="{StaticResource SettingTexbox}"
+                         SelectedText="127.0.0.1" />
+                <TextBlock Text="Port"
+                           Style="{StaticResource SettingsHeader2}" />
+                <TextBox Style="{StaticResource SettingTexbox}"
+                         SelectedText="8888" />
+                <Button Style="{StaticResource SettingButton}"
+                        VerticalAlignment="Center" Content="Re-Connect"/>
+                
+                <TextBlock Text="ICE Servers" Style="{StaticResource SettingsHeader2}" />
+                <ListView Style="{StaticResource SettingsListView}" >
+                    
+                </ListView>
+                
             </StackPanel>
+            <StackPanel Background="Transparent" Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" Orientation="Horizontal">
+                <Button Style="{StaticResource SettingsIconButton}">
+                    <SymbolIcon Symbol="Add" />
+                </Button>
 
-            <TextBlock x:Uid="Settings_About" Style="{ThemeResource SubtitleTextBlockStyle}" />
-
-            <StackPanel Margin="{StaticResource XSmallTopMargin}">
-                <TextBlock Style="{ThemeResource BodyTextBlockStyle}" Text="{x:Bind ViewModel.VersionDescription, Mode=OneWay}" />
-                <TextBlock
-                    x:Uid="Settings_AboutDescription"
-                    Margin="{StaticResource XSmallTopMargin}"
-                    Style="{ThemeResource BodyTextBlockStyle}" />
-
-                <HyperlinkButton x:Uid="Settings_PrivacyTermsLink" Margin="{StaticResource XSmallTopMargin}" />
+                <Button  Style="{StaticResource SettingsIconButton}">
+                    <SymbolIcon Symbol="Delete"/>
+                </Button>
             </StackPanel>
-        </StackPanel>
-    </Grid>    
+            
+        </Grid>
+        <Grid
+            Grid.Column="1"
+            Style="{StaticResource SettingsGrid}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackPanel Style="{StaticResource SettignStackPanel}">
+                <TextBlock Text="Audio and Video"
+                           Style="{StaticResource SettingsHeader1}" />
+                <TextBlock Text="Cameras"
+                           Style="{StaticResource SettingsHeader2}" />
+                <ComboBox Style="{StaticResource SettingComboBox}">
+                    
+                </ComboBox>
+                <TextBlock Text="Microphones"
+                           Style="{StaticResource SettingsHeader2}" />
+                <ComboBox Style="{StaticResource SettingComboBox}">
+
+                </ComboBox>
+                <TextBlock Text="Speakers"
+                           Style="{StaticResource SettingsHeader2}" />
+                <ComboBox Style="{StaticResource SettingComboBox}">
+
+                </ComboBox>
+                <TextBlock Text="Audio Codec"
+                           Style="{StaticResource SettingsHeader2}" />
+                <ComboBox Style="{StaticResource SettingsMiniComboBox}">
+
+                </ComboBox>
+                <TextBlock Text="Video Codec"
+                           Style="{StaticResource SettingsHeader2}" />
+                <ComboBox Style="{StaticResource SettingsMiniComboBox}">
+
+                </ComboBox>
+                <TextBlock Text="Capture Resolution"
+                           Style="{StaticResource SettingsHeader2}" />
+                <ComboBox Style="{StaticResource SettingsMiniComboBox}">
+
+                </ComboBox>
+                <TextBlock Text="Capture Frame Rate"
+                           Style="{StaticResource SettingsHeader2}" />
+                <ComboBox Style="{StaticResource SettingsMiniComboBox}">
+
+                </ComboBox>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Column="2" Style="{StaticResource SettingsGrid}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <StackPanel Style="{StaticResource SettignStackPanel}">
+                <TextBlock Text="Debug"
+                           Style="{StaticResource SettingsHeader1}" />
+                <TextBlock Text="Tracing"
+                           Style="{StaticResource SettingsHeader2}" />
+                <ToggleSwitch Margin="10,0,0,0" />
+                <RichTextBlock Margin="10" FontSize="15">
+                    <Paragraph>
+                        Note: Traces are saved to the file in local application data store folder.
+                    </Paragraph>
+                </RichTextBlock>  
+               
+                <TextBlock Text="Trace File Name"
+                           Style="{StaticResource SettingsHeader2}" />
+                <TextBox Style="{StaticResource SettingTexbox}" Text="webrtc-trace.txt">
+
+                </TextBox>
+                <TextBlock Text="Trace Server IP"
+                           Style="{StaticResource SettingsHeader2}" />
+                <TextBox Style="{StaticResource SettingTexbox}" Text="127.0.0.1">
+
+                </TextBox>
+                <TextBox Style="{StaticResource SettingTexbox}"
+                         Text="55000">
+
+                </TextBox>
+                <TextBlock Text="Logging"
+                           Style="{StaticResource SettingsHeader2}" />
+                <ToggleSwitch Margin="10,0,0,0" />
+            </StackPanel>
+        </Grid>
+        
+    </Grid>
+
 </Page>
