--- a/DesktopApp/App.xaml
+++ b/DesktopApp/App.xaml
@@ -8,7 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
 
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <ResourceDictionary Source="/Styles/SettingsHeaders.xaml" />
+                <ResourceDictionary Source="/Styles/SettingsStyles.xaml" />
                 <ResourceDictionary Source="/Styles/_Colors.xaml" />
                 <ResourceDictionary Source="/Styles/_FontSizes.xaml" />
                 <ResourceDictionary Source="/Styles/_Thickness.xaml" />
