--- a/DesktopApp/App.xaml
+++ b/DesktopApp/App.xaml
@@ -9,6 +9,7 @@
 
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <ResourceDictionary Source="/Styles/SettingsStyles.xaml" />
+                <ResourceDictionary Source="/Styles/OperationPageStyles.xaml" />
                 <ResourceDictionary Source="/Styles/_Colors.xaml" />
                 <ResourceDictionary Source="/Styles/_FontSizes.xaml" />
                 <ResourceDictionary Source="/Styles/_Thickness.xaml" />
